@@ -114,6 +114,15 @@ class ControllerAuthenticatableTest < ActionController::TestCase
     assert @controller.sign_in(user)
   end
 
+  test 'sign in clears up any signed in user' do
+    @controller.instance_variable_set(:@current_user, :example)
+    user = User.new
+    @mock_warden.expects(:user).returns(user)
+    @mock_warden.expects(:set_user).never
+    @controller.sign_in(user)
+    assert_equal nil, @controller.instance_variable_get(:@current_user)
+  end
+
   test 'sign in again when the user is already in only if force is given' do
     user = User.new
     @mock_warden.expects(:user).returns(user)
